# cisa

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  cisa  llvm
include/cisa/: globalctx.h  log.h
scripts/: bcbuild.py  comanal.py  entry.py  log.py
scripts/bcbuild/: .linux.py.swp  libsndfile.py  linux.py  lua.py
src/: analman.cc  analman.h  cisa.cc  globalctx.cc
src/analyzer/: analyzer.cc  analyzer.h  oper.cc  sub.cc
src/callgraph/: Analyzer.cc.old  CallGraph.cc  CallGraph.h  Common.cc  Common.h  Config.h  MLTA.cc  MLTA.h  README.md  TypeDive.cc  TypeDive.h
src/callgraph/test/: .main.c.swp  .test1_v1.c.swp  .test1_v2.c.swp  .test2.c.swp  driver.cc
src/callgraph/test/snippets/: Makefile  common.h  main.bc  main.c  test1_v1.bc  test1_v1.c  test1_v2.bc  test1_v2.c  test2.bc  test2.c
